# task-manager-v2

./: .gitignore  .prettierignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  pyrefly.toml  tsconfig.json  types.d.ts
agent/: agent.py  custom_types.py  db.py  prompts.py  pyproject.toml  pyrefly.toml  task_assistant.py  utils.py
ai/: explore1.ipynb
ai/finetuning/: llama3-3b-ToolACE.ipynb
app/: globals.css
app/(home)/: page.tsx
app/(home)/_components/: agent-ui.tsx  agent-visualizer.tsx  task.tsx
db/task-manager-scripts/: add_indexes.sql  create_google_account_table.sql  create_tasks_table.sql  create_users_table.sql  enable_encryption.sql  model_table_creation.sql
docs/: Aesthetic.md  Logging.md  Production.md  Tasks.md
scripts/: update-memory.sh
webapp/: .eslintrc.json  auth.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json
webapp/app/: globals.css  layout.tsx
webapp/app/(home)/: error.tsx  layout.tsx  page.tsx
webapp/components/: AgentChatMessages.tsx  ApiKeyModal.tsx  NoAgentNotification.tsx  Settings.tsx  navbar.tsx  settings.tsx  sign-in-or-out-button.tsx
webapp/components/audio-level-monitor/: index.tsx
webapp/components/auth/: sign-in.tsx  sign-out.tsx
webapp/components/control-bar/: index.tsx
webapp/components/mic-control/: index.tsx
webapp/components/ui/: button.tsx  (+2 more)
webapp/db/: agent-config.ts  connect.ts  tasks.ts  user.ts
webapp/hooks/: useTasks.ts
webapp/lib/: logger.ts  rate-limiter.ts  task.ts
webapp/types/: agent.ts  auth.ts  next-auth.d.ts  types.d.ts
(+33 files in other folders)
