[project]
name = "task-manager-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[cartesia,deepgram,openai,silero,turn-detector]~=1.0",
    "psycopg[binary,pool]>=3.2.9",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.2",
]

[tool.ruff]
target-version = "py312"